--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<h1>Магазин игр</h1>
 
 			<nav>
-				<a href="#">Главная</a>
+				<a href="index.html">Главная</a>
 				<a href="#">Категории</a>
-				<a href="#">Новости</a>
+				<a href="news.html">Новости</a>
 				<a href="#">Контакты</a>
 				<a href="#">Корзина</a>
 			</nav>
@@ -87,7 +87,19 @@
 		<!-- главное содержимое КОНЕЦ -->
 
 		<!-- подвал НАЧАЛО -->
-		<footer></footer>
+		<footer>
+			
+			<p>
+				Интернет-магазин игр
+			</p>
+
+			<p>
+				<span>
+					Starlance School
+				</span>
+			</p>
+
+		</footer>
 		<!-- подвал КОНЕЦ -->
 
 	</div>
