--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="index.html">Главная</a>
 				<a href="#">Категории</a>
 				<a href="news.html">Новости</a>
-				<a href="#">Контакты</a>
+				<a href="contacts.html">Контакты</a>
 				<a href="#">Корзина</a>
 			</nav>
 
