--- a/news.html
+++ b/news.html
@@ -20,7 +20,7 @@
 				<a href="#">Категории</a>
 				<a href="news.html">Новости</a>
 				<a href="contacts.html">Контакты</a>
-				<a href="#">Корзина</a>
+				<a href="cart.html">Корзина</a>
 			</nav>
 
 		</header>
